[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/grid.png" type="Texture2D" id=1]
[ext_resource path="res://level_editor/level_editor.gd" type="Script" id=2]
[ext_resource path="res://levels/tileset.tres" type="TileSet" id=3]

[node name="LevelEditor" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Grid" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64000, 64000 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -1, 2 )
tile_set = ExtResource( 3 )
format = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 448.0

[node name="ColorRect" type="ColorRect" parent="UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.733333 )

[node name="MarginContainer" type="MarginContainer" parent="UI/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_top = 15
theme_override_constants/margin_left = 30

[node name="TileList" type="HBoxContainer" parent="UI/Control/MarginContainer"]
offset_left = 30.0
offset_top = 15.0
offset_right = 1024.0
offset_bottom = 152.0
theme_override_constants/separation = 30

[node name="ExportFileDialog" type="FileDialog" parent="UI/Control"]
offset_left = 288.0
offset_top = 160.0
offset_right = 736.0
offset_bottom = 416.0
exclusive = true
window_title = "Export le niveau"
dialog_text = "Choisisez le fichier dans lequel vous souhaitez exporter votre niveau."
access = 2
filters = PackedStringArray( "*.json ; Fichier JSON" )

[node name="ImportFileDialog" type="FileDialog" parent="UI/Control"]
offset_left = 288.0
offset_top = 160.0
offset_right = 736.0
offset_bottom = 416.0
exclusive = true
window_title = "Ouvrir un fichier"
dialog_text = "Choisisez le niveau Ã  importer."
mode = 0
access = 2
filters = PackedStringArray( "*.json ; Fichier JSON" )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_bottom = 40.0

[node name="ExportButton" type="Button" parent="UI/Control/VBoxContainer"]
offset_right = 56.0
offset_bottom = 20.0
text = "Export"

[node name="ImportButton" type="Button" parent="UI/Control/VBoxContainer"]
offset_top = 24.0
offset_right = 56.0
offset_bottom = 44.0
text = "Import"

[connection signal="file_selected" from="UI/Control/ExportFileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="UI/Control/ImportFileDialog" to="." method="_on_ImportFileDialog_file_selected"]
[connection signal="pressed" from="UI/Control/VBoxContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="UI/Control/VBoxContainer/ImportButton" to="." method="_on_ImportButton_pressed"]
